fix: long comments:
word-break on long comments
fixed paddingLeft on high level nested comments

--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -19,6 +19,7 @@ color: #666666;
 }
 
 .Comment-text {
+  word-wrap: break-word;
   margin: 10px 0;
   font-size: 14px;
   line-height: 16px;
